# scribe

./: Dockerfile  docker-compose.yml
scribe/: database.py  install.sh  main.py  pyproject.toml
scribe/lib/: __init__.py  elo.py  util.py
scribe/models/: __init__.py  event.py  item_set.py  mongo.py  user.py
scribe/routers/: ascribe.py  describe.py  prescribe.py
