[tool.poetry]
name = "scribe"
version = "0.1.0"
description = "Backend for user modeling"
authors = ["Zak Risha <zjrisha@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
motor = "^2.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
